Set up of release 3.52.7 and included icons for mac and windows.

--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -1,3 +1,11 @@
+# UnBBayes properties 
+version=3.52.7
+buildId=20090911-01
+#0=alfa 1=beta 2=stable     
+stableStatus= 1
+
+################################################
+
 # enables/disables logging using TextLogManager
 unbbayes.io.log.TextLogManager.enabled=true
 unbbayes.io.NetworkCompilationLogManager.enabled=true
