--- a/UnBBayes/plugins/unbbayes.core/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.core/plugin.xml
@@ -9,14 +9,18 @@
     </runtime>
     <!-- Module extension point. 
     	 UnBBayes' modules are basically new internal frames which are started when toolbars or menu are chosen.
-    	 This extension point must implement unbbayes.gui.IPersistenceAwareWindow and provide the following informations:
-    	 	class: full class name;
-    	 	name: name of the functionality
+    	 This extension point must extend unbbayes.util.extension.UnBBayesModule and provide the following informations:
+    	 	class: full class name. It must extend unbbayes.util.extension.UnBBayesModule and provide a default constructor
+    	 							(a constructor with no parameters) if factoryClass is not provided.
+    	    builder: a class to instantiate the module. It must implement  unbbayes.util.extension.UnBBayesModuleBuilder.
+    	    			  Use this field if "class" cannot provide a plausible default constructor.
+    	 	name: name of the functionality. It must be unique.
     	 	description: tool tip text. Currently, no localization is supported.
     	 	icon: icon (image) to be used at the tool bar's button. 
     -->
     <extension-point id="Module">
         <parameter-def id="class"/>
+        <parameter-def id="builder" multiplicity="none-or-one" />
         <parameter-def id="name"/>
 		<parameter-def id="description" multiplicity="none-or-one" />
 		<parameter-def id="icon" multiplicity="none-or-one" />
