Unified plugin routines into a singleton class. Also, fixed a issue that was reseting global options at every dialogue.

--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -19,3 +19,7 @@ unbbayes.prs.mebn.ssbn.BuilderLocalDistributionImpl.clearSimpleSSBNNodeListAtLPD
 unbbayes.prs.mebn.MultiEntityBayesianNetwork.useStorageImplementor=true
 # tells ssbn generation to log all nodes and its probabilities.
 unbbayes.controller.MEBNController.toLogNodesAndProbabilities=false
+
+################################################
+# sets the default folder to look for plugins
+unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginsDirectoryName=plugins
