--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -23,3 +23,5 @@ unbbayes.controller.MEBNController.toLogNodesAndProbabilities=false
 ################################################
 # sets the default folder to look for plugins
 unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginsDirectoryName=plugins
+# id of the core plugin (a stub plugin representing UnBBayes' core)
+unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginCoreID=unbbayes.util.extension.core
