--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -25,3 +25,5 @@ unbbayes.controller.MEBNController.toLogNodesAndProbabilities=false
 unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginsDirectoryName=plugins
 # id of the core plugin (a stub plugin representing UnBBayes' core)
 unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginCoreID=unbbayes.util.extension.core
+# id of the extension point for new node declarations using plugins
+unbbayes.util.extension.node.CorePluginNodeManager.pluginNodeExtensionPointID=PluginNode
