--- a/UnBBayes/plugins/unbbayes.core/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.core/plugin.xml
@@ -50,7 +50,7 @@
     <extension-point id="PNIO">
         <parameter-def id="class"/>
     </extension-point>
-    <!-- !!!CAUTION: THIS IS NOT IMPLEMENTED YET !!!
+    <!-- 
     	 ResourceBundle extension point. 
     	 This extension point is basically a set of different ResourceBundle, in order to implement
     	 localization (add new languages) using plugins.
@@ -72,11 +72,53 @@
         <parameter-def id="class"/>
     </extension-point>
     
-    
+    <!-- 
+    	 PluginNode extension point. 
+    	 This extension point basically declares a new node type for BN module and a set of additional informations
+    	 in order to show this node within GUI. Please note that I/O and/or inference algorithms must be implemented 
+    	 separately (see PNIO and InferenceAlgorithm extension points) as a dependent plugin, in order to
+    	 make it possible to compile or save a network containing these new node types.
+    	 
+    	 The arguments are basically:
+    	 	class: class of a node implementing unbbayes.prs.extension.IPluginNode. 
+    	 	       If so, the class must provide a default constructor with no arguments.
+    	 	       
+    	 	       This parameter may also be a builder extending unbbayes.prs.builder.extension.PluginNodeBuilder
+    	 	       or implementing unbbayes.prs.builder.INodeBuilder. In such case, the builded node must be a instance
+    	 	       of unbbayes.prs.extension.IPluginNode. This approach is useful if the node class does not
+    	 	       provide a default constructor with no arguments. The builder itself must provide a default constructor
+    	 	       with no arguments.
+    	 	       
+    	 	shapeClass: class implementing unbbayes.draw.extension.IPluginUShape, used in order to draw a node into canvas. 
+    	 		   In this case, it must provide a default constructor with no arguments.
+    	 	           	 	       
+    	 	       This parameter may also be a builder implementing unbbayes.draw.extension.IPluginUShapeBuilder.
+    	 	       In this case, the builded node must be a instance
+    	 	       of unbbayes.draw.extension.IPluginUShape. This approach is useful if the shape class does not
+    	 	       provide a default constructor with no arguments. The builder itself must provide a default constructor
+    	 	       with no arguments.
+    	 	       
+    	 	name: the name of the new node type. This is going to be used as a label.
+    	 	
+    	 	panelBuilder: class implementing unbbayes.gui.table.extension.IProbabilityFunctionPanelBuilder. This is basically
+    	 	      a class holding a swing JPanel, displayed to the user in order to edit this node's information, such as
+    	 	      probability distribution functions and other specific details.
+    	 	       
+    	 	description: a brief description of a node type. This is going to be used a tool tip text.
+    	 	       
+    	 	icon: an image (usually gif or png) to be used as an icon. This will be used for buttons.
+    	 	      if not set, a default icon will be used.
+    	 	       
+    	 	cursor: an image (usually gif or png) to be used as a cursor when this new node type
+    	 	      is being selected by the user. The upper left corner (point x = 0, y = 0) will 
+    	 	      be marked as the active point. If not set, a default cursor will be used.
+    	 	
+    -->
     <extension-point id="PluginNode">
         <parameter-def id="class"/>
         <parameter-def id="shapeClass"/>
         <parameter-def id="name"/>
+		<parameter-def id="panelBuilder"/>
 		<parameter-def id="description" multiplicity="none-or-one" />
 		<parameter-def id="icon" multiplicity="none-or-one" />
 		<parameter-def id="cursor" multiplicity="none-or-one" />
