--- a/UnBBayes/src/main/resources/application.properties
+++ b/UnBBayes/src/main/resources/application.properties
@@ -27,3 +27,5 @@ unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginsDirectoryName
 unbbayes.util.extension.manager.UnBBayesPluginContextHolder.pluginCoreID=unbbayes.util.extension.core
 # id of the extension point for new node declarations using plugins
 unbbayes.util.extension.node.CorePluginNodeManager.pluginNodeExtensionPointID=PluginNode
+# id of the extension point for new Conditional Probability Function's declarations using plugins
+unbbayes.util.extension.manager.CoreCPFPluginManager.cpfExtensionPointID=ProbabilityFunctionPanel
