--- a/UnBBayes/plugins/unbbayes.oobn.resources.ja/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.oobn.resources.ja/plugin.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
+<!-- This plugin adds japanese localization for OOBN Module. You may use this configuration as a sample
+     to add more localization to UnBBayes. -->
 <plugin id="unbbayes.oobn.resources.ja" version="1.0.0">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
