--- a/UnBBayes/plugins/unbbayes.prs.extension.impl.ProbabilisticNodePluginStub/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.prs.extension.impl.ProbabilisticNodePluginStub/plugin.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
+<!-- This is a sample configuration for "new node type" plugin. By creating plugins like this, you can
+     add new node types to core (PN module) -->
 <plugin id="unbbayes.prs.extension.impl.ProbabilisticNodePluginStub" version="1.0.0">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
