--- a/UnBBayes/plugins/unbbayes.metaphor.afin/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.metaphor.afin/plugin.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
-<plugin id="unbbayes.metaphor.afin" version="1.0.0">
+<!-- This is a Metaphor project generated as a result of human identification project.
+     This is basically a customization of Medical Metaphor -->
+<plugin id="unbbayes.metaphor.afin" version="1.1.0">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
     </requires>
