Refactored sampling tools as plugins. Also, added categorization for module plugins. Changed unbminer plugin icon's size.

--- a/UnBBayes/plugins/unbbayes.datamining/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.datamining/plugin.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
+<!-- This is the plugin descriptor for UnBBayes' datamining module (UnBMiner). -->
 <plugin id="unbbayes.datamining" version="0.0.1">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
@@ -16,5 +17,6 @@
         <parameter id="builder" value="unbbayes.datamining.gui.extension.UnBMinerJPFModule" />
 		<parameter id="description" value="UnBBayes Dataminer - UnBMiner" />
 		<parameter id="icon" value="mining.png" />
+		<parameter id="category" value="tool" />
     </extension>
 </plugin>
