--- a/UnBBayes/plugins/unbbayes.core/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.core/plugin.xml
@@ -18,6 +18,14 @@
     	 	name: name of the functionality. It must be unique.
     	 	description: tool tip text. Currently, no localization is supported.
     	 	icon: icon (image) to be used at the tool bar's button. 
+    	 	category: this is a name read by UnBBayes in order to categorize a module.
+    	 	          currently, the default values are: 
+    	 	          			- none (no definition or empty) or "plugins": the module's menu will be added to "plugin" menu; 
+    	 	          			- "bn": the button will be added into "new" tool bar and the module's menu will be added into "new" menu;
+    	 	          			- "tool": the module's menu will be added into "tool" menu; 
+    	 	          			- "sampling": the module's menu will be added into "sampling" menu;
+    	 	          			- user-defined (any category not listed above): the module's menu will be added into a new menu, but no localization support
+    	 	          			              will be availabe.
     -->
     <extension-point id="Module">
         <parameter-def id="class"/>
@@ -25,6 +33,7 @@
         <parameter-def id="name"/>
 		<parameter-def id="description" multiplicity="none-or-one" />
 		<parameter-def id="icon" multiplicity="none-or-one" />
+		<parameter-def id="category" multiplicity="none-or-one" />
     </extension-point>
     
     <!-- BN inference algorithm extension point and its option panel. 
