Refactored msbn module as a plugin. Also, added plugin's logo image into image's folder.

--- a/UnBBayes/plugins/unbbayes.prs.oobn/plugin.xml
+++ b/UnBBayes/plugins/unbbayes.prs.oobn/plugin.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" ?>
 <!DOCTYPE plugin PUBLIC "-//JPF//Java Plug-in Manifest 1.0" "http://jpf.sourceforge.net/plugin_1_0.dtd">
 <!-- This is the plugin descriptor for UnBBayes' OOBN module. -->
-<plugin id="unbbayes.prs.oobn" version="1.0.0">
+<plugin id="unbbayes.prs.oobn" version="1.0.1">
     <requires>
         <import plugin-id="unbbayes.util.extension.core"/>
+        <import plugin-id="unbbayes.prs.msbn"/>
     </requires>
     <runtime>
         <library id="oobn" path="classes/" type="code">
