--- a/unbbayes.oobn.resources.ja/.settings/org.eclipse.jdt.core.prefs
+++ b/unbbayes.oobn.resources.ja/.settings/org.eclipse.jdt.core.prefs
@@ -1,8 +1,8 @@
-#Sun Feb 28 08:57:32 GMT-03:00 2010
+#Tue Mar 02 00:04:11 EST 2010
 eclipse.preferences.version=1
 org.eclipse.jdt.core.builder.cleanOutputFolder=ignore
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.5
-org.eclipse.jdt.core.compiler.compliance=1.5
+org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.2
+org.eclipse.jdt.core.compiler.compliance=1.4
 org.eclipse.jdt.core.compiler.problem.assertIdentifier=error
 org.eclipse.jdt.core.compiler.problem.enumIdentifier=error
-org.eclipse.jdt.core.compiler.source=1.5
+org.eclipse.jdt.core.compiler.source=1.3
