--- a/unbbayes.prs.oobn/.settings/org.eclipse.jdt.core.prefs
+++ b/unbbayes.prs.oobn/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Sun Feb 28 08:33:53 GMT-03:00 2010
+#Tue Mar 02 20:26:44 EST 2010
 eclipse.preferences.version=1
 org.eclipse.jdt.core.builder.cleanOutputFolder=ignore
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
