--- a/unbbayes.metaphor.afin/pom.xml
+++ b/unbbayes.metaphor.afin/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.unb.cic</groupId>
 	<artifactId>unbbayes.metaphor.afin</artifactId>
-	<name>Medical Metaphor</name>
+	<name>Afin Metaphor</name>
 	<!-- If you change the below version, -->
 	<!-- change version and library settings on plugin.xml too, because this is included as library -->
 	<version>1.2.0</version>
