Changes in developers names

--- a/unbbayes.prs.mebn.ssbn.ssmsbn/pom.xml
+++ b/unbbayes.prs.mebn.ssbn.ssmsbn/pom.xml
@@ -178,7 +178,7 @@
 		</developer>
 		<developer>
 			<id>estevaoaguiar</id>
-			<name>Rafael Mezzomo de Souza</name>
+			<name>Estevão Fernandes Aguiar</name>
 			<email>estevaofaguiar@yahoo.com.br</email>
 			<roles>
 				<role>Developer</role>
