updating readme files

--- a/unbbayes.prs.mebn.ssbn.ssmsbn/pom.xml
+++ b/unbbayes.prs.mebn.ssbn.ssmsbn/pom.xml
@@ -264,6 +264,11 @@
 				<artifactId>unbbayes.prs.mebn</artifactId>
 				<version>1.4.0</version>
 			</dependency>
+			<dependency>
+				<groupId>br.unb.cic</groupId>
+				<artifactId>unbbayes.prs.msbn</artifactId>
+				<version>1.1.0</version>
+			</dependency>
 		
 			
 	</dependencies>
