--- a/unbbayes.prs.mebn.ssbn.ssmsbn/plugins/unbbayes.prs.mebn.ssbn.ssmsbn/plugin.xml
+++ b/unbbayes.prs.mebn.ssbn.ssmsbn/plugins/unbbayes.prs.mebn.ssbn.ssmsbn/plugin.xml
@@ -23,42 +23,7 @@
         </library>
     
     </runtime>
-    <!-- Multi-Entity Bayesian Network I/O extension point. 
-     	 Hot plug is enabled.
-    	 This extension point is basically a set of different classes implementing
-    	 unbbayes.io.BaseIO, in order to add new IO functions into this MEBN
-    	 module. The class must contain a public default constructor (no parameters).
-    	 	Parameters:
-    	 		class: this is the class to implement unbbayes.io.BaseIO. It MUST have a default constructor
-    	 			   with no parameters.
-    	 	    name: this is basically what an user will see when a conflict occurs 
-    	 	          (when more than 1 class can handle a given file).
-    -->
-    <extension-point id="MEBNIO">
-        <parameter-def id="class"/>
-        <parameter-def id="name"/>
-    </extension-point>
-    
-    <!-- Multi-Entity Bayesian Network' Knowledge Base extension point. 
-     	 Hot plug is enabled.
-    	 This extension point is basically a set of different classes implementing
-    	 unbbayes.prs.mebn.kb.extension.IKnowledgeBaseBuilder, in order to add new Knowledge
-    	 Base functions into this MEBN
-    	 module. The class must contain a public default constructor (no parameters).
-    	 	Parameters:
-    	 		class: this is the class to implement unbbayes.prs.mebn.kb.extension.IKnowledgeBaseBuilder. 
-    	 		       It MUST provide a default constructor
-    	 			   with no parameters.
-    	 	    name: this is basically a name to identify a Knowledge Base.
-    	 	    optionPanel : this is a panel to be used as a form to fill attributes for this Knowledge Base.
-    	 	           It MUST implement unbbayes.gui.mebn.extension.kb.IKBOptionPanelBuilder.
-    	 	           It MUST provide a default constructor with no parameters.
-    -->
-    <extension-point id="KnowledgeBase">
-        <parameter-def id="class"/>
-        <parameter-def id="name"/>
-        <parameter-def multiplicity="none-or-one" id="optionPanel"/>
-    </extension-point>
+   
     
     <!-- Situation Specific Bayesian Network generation extension point. 
      	 Hot plug is enabled.
@@ -80,12 +45,9 @@
         <parameter-def multiplicity="none-or-one" id="optionPanel"/>
     </extension-point>
     
-    <extension plugin-id="unbbayes.util.extension.core" point-id="Module" id="MEBN">
-        <parameter id="class" value="unbbayes.gui.mebn.MEBNNetworkWindow" />
-        <parameter id="name" value="MEBN" />
-        <parameter id="builder" value="unbbayes.gui.mebn.extension.MEBNWindowBuilder" />
-		<parameter id="description" value="Multi Entity Bayesian Network" />
-		<parameter id="icon" value="new-mebn.png" />
-		<parameter id="category" value="bn" />
+    <extension plugin-id=" unbbayes.prs.mebn" point-id="SSBN" id="SSMSBN">
+        <parameter id="class" value="unbbayes.prs.mebn.ssbn.extension.SSMSBNBuilder" />
+        <parameter id="name" value="SSMSBN" />
+
     </extension>
 </plugin>
