--- a/unbbayes.prs.mebn.ssbn.ssmsbn/plugins/unbbayes.prs.mebn.ssbn.ssmsbn/plugin.xml
+++ b/unbbayes.prs.mebn.ssbn.ssmsbn/plugins/unbbayes.prs.mebn.ssbn.ssmsbn/plugin.xml
@@ -25,8 +25,8 @@
     </runtime>
     
     <extension plugin-id="unbbayes.prs.mebn" point-id="SSBN" id="SSMSBN">
-        <parameter id="class" value="unbbbayes.prs.mebn.ssbn.extension.ssmsbn.SSMSBNAlgorithmBuilder" />
+        <parameter id="class" value="unbbayes.prs.mebn.ssbn.extension.ssmsbn.SSMSBNAlgorithmBuilder" />
         <parameter id="name" value="SSMSBN" />
-
+		<parameter id="optionPanel" value="unbbayes.gui.mebn.extension.ssmsbn.LaskeyAlgorithmOptionPanalBuilderSSMSBN"></parameter>
     </extension>
 </plugin>
